[package]
name = "devcontainer"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.17.1"
clap = { version = "4.5.20", features = ["derive"] }
flate2 = "1.0.34"
futures-util = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde-hjson = "1.1.0"
tar = "0.4.42"
tempfile = "3.13.0"
termion = "4.0.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util= { version = "0.7.12", features = ["full"] }
